// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reader.Header Component renders correctly 1`] = `
<div>
  <header
    className="header-reader"
  >
    <nav
      className="container-banner"
    >
      <button
        className="button-menu"
        data-id="toggle-menu"
        onClick={[Function]}
      >
        Menu
      </button>
      <button
        className="button-index"
        onClick={[Function]}
      >
        Contents
        <i
          aria-hidden="true"
          className="manicon manicon-caret-down"
        />
      </button>
      <nav
        className="menu-buttons"
      >
        <ul>
          <li>
            <button
              className="button-visibility"
              data-id="toggle-visibility"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-eye-outline"
              />
              <span
                className="screen-reader-text"
              >
                Open the visibility menu
              </span>
            </button>
          </li>
          <li>
            <button
              className="button-appearance"
              data-id="toggle-appearance"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-aa"
              />
              <span
                className="screen-reader-text"
              >
                Open reader appearance menu
              </span>
            </button>
          </li>
          <li>
            <button
              className="button-search"
              data-id="toggle-menu"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-magnify"
              />
              <span
                className="screen-reader-text"
              >
                Open search
              </span>
            </button>
          </li>
          <li>
            <button
              className="button-avatar"
              onClick={[Function]}
            >
              <span
                className="screen-reader-text"
              >
                Login or open user settings
              </span>
              <figure
                className="avatar"
                style={undefined}
              >
                <span
                  className="screen-reader-text"
                >
                  Avatar
                </span>
                <i
                  aria-hidden="true"
                  className="manicon manicon-person"
                />
              </figure>
            </button>
          </li>
        </ul>
      </nav>
    </nav>
    <nav
      className="menu-panels-left"
    >
      <span />
    </nav>
    <nav
      className="menu-panels-right"
    >
      <span />
      <span />
      <span />
      <span />
      <span />
    </nav>
    <section
      className="notifications-container"
      role="alert"
    >
      <div
        className="notifications-list-header notifications-list"
      >
        <span />
      </div>
    </section>
  </header>
</div>
`;

exports[`Reader.Header Component renders correctly when no TOC or metadata 1`] = `
<div>
  <header
    className="header-reader"
  >
    <nav
      className="container-banner"
    >
      <button
        className="button-menu"
        data-id="toggle-menu"
        onClick={[Function]}
      >
        Menu
      </button>
      <nav
        className="menu-buttons"
      >
        <ul>
          <li>
            <button
              className="button-visibility"
              data-id="toggle-visibility"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-eye-outline"
              />
              <span
                className="screen-reader-text"
              >
                Open the visibility menu
              </span>
            </button>
          </li>
          <li>
            <button
              className="button-appearance"
              data-id="toggle-appearance"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-aa"
              />
              <span
                className="screen-reader-text"
              >
                Open reader appearance menu
              </span>
            </button>
          </li>
          <li>
            <button
              className="button-search"
              data-id="toggle-menu"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="manicon manicon-magnify"
              />
              <span
                className="screen-reader-text"
              >
                Open search
              </span>
            </button>
          </li>
          <li>
            <button
              className="button-avatar"
              onClick={[Function]}
            >
              <span
                className="screen-reader-text"
              >
                Login or open user settings
              </span>
              <figure
                className="avatar"
                style={undefined}
              >
                <span
                  className="screen-reader-text"
                >
                  Avatar
                </span>
                <i
                  aria-hidden="true"
                  className="manicon manicon-person"
                />
              </figure>
            </button>
          </li>
        </ul>
      </nav>
    </nav>
    <nav
      className="menu-panels-left"
    >
      <span />
    </nav>
    <nav
      className="menu-panels-right"
    >
      <span />
      <span />
      <span />
      <span />
      <span />
    </nav>
    <section
      className="notifications-container"
      role="alert"
    >
      <div
        className="notifications-list-header notifications-list"
      >
        <span />
      </div>
    </section>
  </header>
</div>
`;
